# raylib-game

./: .clang-format  .gitignore  Build.Debug.bat  Build.Release.bat  CMakeLists.txt  LICENSE  conanfile.txt
assets/: Map.tmx  beach_tileset.tsx  island.tmx
assets/Ground/: glass.tsx
assets/Slope/: stair.aseprite
assets/Tiles/: edge.tsx  glass.aseprite  glass.tsx  tilemaps.tsx  water.aseprite  water.tsx  精灵-0001.aseprite
include/: tmx-loader.h  utils.h
src/: constants.h  context.h  main.c  tmx-loader.c  utils.h
src/ecs/components/: basic.h  physics.h  player.h  tile-anim.h  tile-animate.h  tile-collider.h
src/ecs/entities/: collision.h  physics-world.h  player.h  tile-anim.h  tile-animate.h
src/ecs/systems/: collision.h  movement.h  physics-basic.h  player-anim.h
src/tilemap/: animate.h  animation.h  camera.h  chunk.h  collison.h  handle.h  render.h  tilemap.h  utils.h  viewport.h
src/tilemap/tmx/: loader.h
src/tilemap/types/: chunk.h  common.h  render.h  types.h
